@@ -4,6 +4,7 @@
 
 - improved HTMLParser parser
 - extended `Flow.socket(flow, socket, [verify(client)], [check(client, msg)])` by adding `check` argument for verifying permissions
+- fixed icons in FlowStream core for TMS
 
 ========================
 0.0.9
